automate/k8s/reverseproxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverseproxy
  labels:
    app: reverseproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reverseproxy
  template:
    metadata:
      labels:
        app: reverseproxy
    spec:
      containers:
      - name: reverseproxy
        image: "reverseproxy:latest"
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
