automate/k8s/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: db-storage
      containers:
      - name: db
        image: "db:latest"
        imagePullPolicy: Never
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: db-storage
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    app: db
